--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                     </h2>
                                     <p>
                                         
-                                             以心为鉴 · 梦归瓦兰<br>ᕕ( ᐛ )ᕗ
+                                            以心为鉴 · 梦归瓦兰<br>ᕕ( ᐛ )ᕗ
                                         
                                     </p>
                                 </div>
@@ -76,22 +76,16 @@
                         <div class="iUp">
                             <nav class="cover-navigation navigation--social">
                                 <ul class="navigation">
+
                                     <li class="navigation__item">
-                                        <a href="https://github.com/xuan2weeeeeei1" title="github" target="_blank">
-                                            <i class='social iconfont icon-github'></i>
-                                            <span class="label">github</span>
-                                        </a>
-                                    </li>
-                                    <li class="navigation__item">
-                                        <a href="/" title="cnblogs" target="_blank">
-                                            <i class='social iconfont icon-cnblogs'></i>
+                                        <a href="javascript:alert('https://hack.chat/?lounge\nor\nhttps://hc.thz.cool/?lounge\n\n@Vivian_Xu / @2__2 or use :!tripmsg 3/e804')" title="hackchat">
+                                            <i class='social iconfont icon-h'></i>
                                             <span class="label">cnblogs</span>
                                         </a>
                                     </li>
-
                                     <li class="navigation__item">
-                                        <a href="/" title="zhihu" target="_blank">
-                                            <i class='social iconfont icon-zhihu'></i>
+                                        <a href="https://luogu.com/user/940688" title="luogu" target="_blank">
+                                            <i class='social iconfont icon-l'></i>
                                             <span class="label">zhihu</span>
                                         </a>
                                     </li>
@@ -101,6 +95,12 @@
                                         <a href="mailto:admin@awaish.link" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
+                                        </a>
+                                    </li>
+                                    <li class="navigation__item">
+                                        <a href="https://github.com/xuan2weeeeeei1" title="github" target="_blank">
+                                            <i class='social iconfont icon-github'></i>
+                                            <span class="label">github</span>
                                         </a>
                                     </li>
                                 </ul>
