--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <li class="navigation__item">
                                         <!-- 加密的邮箱地址, 请自行修改, 或者改用下方的明文方式 -->
                                         <!-- <a href="javascript:decryptEmail('ZG1lYWdvQGdtYWlsLmNvbQ==');" title="email"> -->
-                                        <a href="mailto:admin@awaish.link" title="email">
+                                        <a href="mailto:wryxuanwei@hotmail.com" title="email">
                                             <i class='social iconfont icon-email'></i>
                                             <span class="label">email</span>
                                         </a>
